feat(main): updated dependencies and added auth example

--- a/http-demo/templates/dashboard.html
+++ b/http-demo/templates/dashboard.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="alert alert-primary d-flex justify-content-between">
                 <h4 class="mb-0">
-                    <i class="bi bi-box"></i>&nbsp;&nbsp;{{index . "title"}}
+                    <i class="bi bi-terminal"></i>&nbsp;&nbsp;{{index . "title"}}
                 </h4>
                 <strong>
                     <i class="bi bi-github"></i> <a href="https://github.com/ankorstore/yokai-showroom/tree/main/http-demo" target="_blank">GitHub</a>
@@ -24,7 +24,7 @@
                 <div class="col col-sm-12">
                     <div class="card">
                         <div class="card-header">
-                            <i class="bi bi-card-list"></i>&nbsp;&nbsp;Gophers endpoints
+                            <i class="bi bi-card-list"></i>&nbsp;&nbsp;Gophers API -  endpoints
                         </div>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
